<resources>
    <string name="app_name">Jewellery Store</string>

    <string name="helloagain">Hello Again!</string>
    <string name="welcomeback">Sign In to Shine – Discover Exquisite Jewelry Just for You!</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Login</string>
    <string name="prodectname">Product</string>
    <string name="weight">Weight</string>
    <string name="price">$ 100</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity">1</string>
    <string name="free_delivery">FREE delivery</string>
    <string name="instock">In Stock</string>
    <string name="about">Product Description</string>
    <string name="aboutproduct">This is a beautiful handcrafted gold necklace designed for special occasions.</string>
    <string name="entermail">Enter Email id</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enterpincode">Enter Pin Code</string>
    <string name="totalprice">Total price</string>
    <string name="loding">Loading...</string>
    <string name="cod">COD</string>
    <string name="expirydate">Expiry Date</string>
    <string name="date">MMYY</string>
    <string name="cvv">CVV</string>
    <string name="proseedtopayment">Proceed to Payment</string>
    <string name="register">Register</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
</resources>