<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Product Layout (Image + Details) -->
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Product Image -->
            <ImageView
                android:id="@+id/product_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.2"
                android:scaleType="center"
                android:src="@drawable/ic_launcher_background" />

            <!-- Product Details -->
            <LinearLayout
                android:id="@+id/product_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="start"
                android:orientation="vertical">

                <!-- Product Name -->
                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/inter"
                    android:maxLines="2"
                    android:text="@string/prodectname"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <!-- Product Price -->
                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Free Delivery -->
                <TextView
                    android:id="@+id/free_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/free_delivery"
                    android:textColor="@color/hellomessage"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Product Size -->
        <TextView
            android:id="@+id/product_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:gravity="center"
            android:text="@string/weight"
            android:textColor="@color/black"

            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <!-- Add to Cart Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btncart"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:background="@drawable/btn_bg"
            android:drawableStart="@drawable/addcart"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="Add to Cart"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
